--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,26 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YelpCamp</title>
-
+    <title>FoodFiesta</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/home.css" />
   </head>
+
   <body class="d-flex text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">YelpCamp</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
+          <h3 class="float-md-left mb-0">FoodFiesta</h3>
+          <nav class="nav nav-masthead justify-content-center float-md-right">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="/campgrounds">Campgrounds</a>
+            <a class="nav-link" href="/restaurants">Restaurants</a>
             <% if(!currentUser) { %>
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/register">Register</a>
@@ -32,28 +31,31 @@
         </div>
       </header>
       <main class="px-3">
-        <h1>YelpCamp</h1>
+        <h1>FoodFiesta</h1>
         <p class="lead">
-          Welcome to YelpCamp! <br />
-          Jump right in and explore our many campgrounds. <br />
-          Feel free to share some of your own and comment on others!
+          Welcome to FoodFiesta! <br />
+          What are you feasting on today ?<br />
         </p>
-        <a href="/campgrounds" class="btn btn-lg btn-secondary fw-bold border-white bg-white">View Campgrounds</a>
+        <a
+          href="/restaurants"
+          class="
+            btn btn-lg btn-secondary
+            font-weight-bold
+            border-white
+            bg-white
+          "
+          >View Restaurants</a
+        >
       </main>
 
-      <footer class="mt-auto tw-50">
-        <p>&copy; 2022 YelpCamp</p>
+      <footer class="mt-auto text-white-50">
+        <p>Developed by - Bhavya Chaudhary</p>
       </footer>
     </div>
 
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
   </body>
