--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="footer text-center bg-dark py-2 mt-auto">
+<footer class="footer py-3 mt-auto" style="background-color: #41403c">
   <div class="container">
-    <span class="text-muted">&copy;YelpCamp 2022</span>
+    <span class="text-muted">&copy FoodFiesta</span>
   </div>
 </footer>
