--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,34 +3,41 @@
 <div class="container d-flex justify-content-center align-items-center mt-5">
   <div class="row">
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-      <div class="card shadow border-1">
+      <div class="card shadow">
         <img
-          src="https://images.unsplash.com/photo-1504280390367-361c6d9f38f4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+          src="https://res.cloudinary.com/dwtkhznmd/image/upload/v1631253060/FoodFiesta/photo-1522336572468-97b06e8ef143_mbs0gx.jpg"
           alt=""
-          class="img-fluid"
+          class="card-img-top"
         />
         <div class="card-body">
           <h5 class="card-title">Login</h5>
           <form action="/login" method="POST" class="validated-form" novalidate>
             <div class="mb-3">
               <label class="form-label" for="username">Username</label>
-              <input class="form-control" type="text" id="username" name="username" autofocus required />
+              <input
+                class="form-control"
+                type="text"
+                id="username"
+                name="username"
+                autofocus
+                required
+              />
               <div class="valid-feedback">Looks good!</div>
             </div>
 
             <div class="mb-3">
               <label class="form-label" for="password">Password</label>
-              <input class="form-control" type="password" id="password" name="password" required />
+              <input
+                class="form-control"
+                type="password"
+                id="password"
+                name="password"
+                required
+              />
               <div class="valid-feedback">Looks good!</div>
             </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-              <button class="btn btn-success btn-block">Login</button>
-            </div>
+            <button class="btn btn-success btn-block">Login</button>
           </form>
-          <div class="mt-2 text-center">
-            Don't Have an account?
-            <a href="/register">Sign Up</a>
-          </div>
         </div>
       </div>
     </div>
